# Gauntlet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cmake-build.sh  cmake-config.sh
.github/workflows/: build_cmake.yml
editor/: imgui.ini  settings.json
game/assets/: assets.scene  game.wren  main.scene
game/assets/GameObjects/Characters/: Axe1H.gameobject  Barbarian.gameobject  ShieldRound.gameobject
game/assets/GameObjects/Environment/: BarrelLarge.gameobject  BlueBanner.gameobject  BrownBanner.gameobject  CandleTriple.gameobject  CeilingTile.gameobject  Chair.gameobject  FloorFoundation.gameobject  FloorTileLarge.gameobject  GreenBanner.gameobject  Keg.gameobject  StairsModularRight.gameobject  StairsNarrow.gameobject  StairsWallLeft.gameobject  StairsWallRight.gameobject  StairsWalled.gameobject  WallArched.gameobject  WallArchedWindowGated.gameobject  WallArchedWindowGatedScaffold.gameobject  WallArchedWindowOpen.gameobject  WallBroken.gameobject  WallCorner.gameobject  WallCornerGated.gameobject  (+5 more)
game/assets/Scripts/: camera.wren  character.wren  enemy.wren  item.wren  player.wren  projectile.wren  skeleton.wren  utils.wren
game/assets/Shaders/: Brdf.glsl  GlowSimpleLit.shader  IrrConv.glsl  Model.glsl  Prefilter.glsl  Screen.glsl  SimpleLit.shader  SkinnedSimpleLit.shader  Skybox.glsl  Spell.shader
game/settings/: editor.json  game.json  system.json
include/framework/components/: custom_cmp.hpp
include/framework/systems/: custom_sys.hpp
src/: application.cpp
src/framework/systems/: custom_sys.cpp
(+1066 files in other folders)
